# cpp

./: Makefile  README
cmake/: CMakeLists.txt  TutorialConfig.h  tutorial.c
cpp_primer/chapter_13/13.4/: folder.cpp  folder.h  message.cpp  message.h
essential_cpp/4_4/: Makefile  main.cpp  userprofile.cpp  userprofile.h
opencv/chapter_02/example_2_1/: CMakeLists.txt  display_picture.cpp
opencv/chapter_02/example_2_2/: CMakeLists.txt  example2.cpp
ruminations_on_cpp/: .gitignore  README.md
ruminations_on_cpp/ch_05/: CMakeLists.txt  Makefile  Vehicle.cpp  Vehicle.h  VehicleSurrogate.cpp  VehicleSurrogate.h  main.cpp
ruminations_on_cpp/ch_09/: Makefile  Picture.cpp  Picture.h  main.cpp
